fix overflow comment box on front page

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -349,16 +349,11 @@ margin-top: 5px;
   max-width: 15%;
 }
 
-.candidate:hover {
-  opacity: 1
-}
+.candidate:hover { opacity: 1 }
+.candidate:active { opacity: 1 }
 
-.candidate:active {
-  opacity: 1
-}
-
-.candidate-with-no-answer{ opacity: .5 }
-.candidate-with-no-answer:hover{ opacity: .5 }
+.candidate-with-no-answer{ opacity: .3 }
+.candidate-with-no-answer:hover{ opacity: .3 }
 
 .profile-pic {
   background-size: contain;
@@ -859,8 +854,6 @@ margin-top: 10px;
   }
 }
 
-.candidate-with-no-answer{ opacity: .5 }
-
 .modal {
   width: 80%;
   margin-left: 20px;
@@ -871,3 +864,6 @@ margin-top: 10px;
   margin-left: 0;
   margin-right: 0;
 }
+
+.tab-content { overflow: visible; }
+
